--- a/app/view/international/international-list.html
+++ b/app/view/international/international-list.html
@@ -10,7 +10,7 @@
 <body>
   {% include "../base/header.html" %}
   <div class="s-container ">
-    <h2 class="text-center" style="font-size: 20px;margin-top: 50px;font-weight: 100;">For  the ongoing collection of life®</h2>
+    <h2 class="text-center" style="font-size: 20px;margin-top: 50px;font-weight: 100;">For  the ongoing collection of life<span style="font-size: 16px;vertical-align: top;">®</span></h2>
     <p class="text-center" style="font-size: 12px;">We carry some of the most prestigious and the most exclusive properties worldwide </p>
     <div class="international-list">
       <div class="row" style="max-width:600px; margin: 20px auto;margin-bottom: 50px;">
