--- a/app/style/property-detail.less
+++ b/app/style/property-detail.less
@@ -456,6 +456,7 @@
   .close-full {
     width: 25px;
     height: 25px;
+    z-index: 100;
     background-color: white;
     position: absolute;
     right: 20px;
@@ -469,7 +470,7 @@
     }
   }
   .gallery {
-    margin-top: 40px;
+    // margin-top: 40px;
   }
 }
 
