--- a/app/view/about/contact-us.html
+++ b/app/view/about/contact-us.html
@@ -204,6 +204,7 @@
                   url: '/api/enquiry/',
                   success: function() {
                     G.mNotic('Sent Successfully');
+                    $('#contact-us-form')[0].reset();
                   },
                   error: function(err) {
                     G.mNotic('Sent Error.' + err.responseText, 'error');
