--- a/app/view/buy/search-result.html
+++ b/app/view/buy/search-result.html
@@ -19,7 +19,7 @@
           </div>
           <div class="name">{{item.name}}</div>
           <div class="location">{{item.location}}</div>
-          <div class="price">{{item.sqft}}(SQ FT.)|HKD {{item.price}}</div>
+          <div class="price">{{item.sqft}} SQ FT | {{item.price}}</div>
           <!-- <div class="time">{{item.time}}</div> -->
         </a>
         <!-- <div data-favorite="{{item.id}}" data-value="{{item.loveValue}}" class="favorite">
