--- a/app/view/our-team/member-detail.html
+++ b/app/view/our-team/member-detail.html
@@ -14,7 +14,7 @@
             <div class="text">
               <div id="agent-detail-dialog-name" class="name"></div>
               <div id="agent-detail-dialog-title" class="com-title"></div>
-              <div class="detail-info">Licence No. <span id="agent-detail-dialog-licence"></span></div>
+              <div id="agent-detail-dialog-licence-wrapper" class="detail-info">Licence No. <span id="agent-detail-dialog-licence"></span></div>
               <div class="detail-info">Direct <span id="agent-detail-dialog-direct"></span></div>
               <div class="detail-info">Mobile <span id="agent-detail-dialog-mobile"></span></div>
             </div>
