--- a/app/view/search/list-property.html
+++ b/app/view/search/list-property.html
@@ -93,6 +93,7 @@
                 url: '/api/list_property/',
                 success: function() {
                   G.mNotic('Sent Successfully.');
+                  $('#list_property_form')[0].reset();
                 },
                 error: function(err) {
                   G.mNotic('Sent Error.' + err.responseText, 'error');
