--- a/app/view/buy/detail.html
+++ b/app/view/buy/detail.html
@@ -145,6 +145,7 @@
             <div class="body">
               {% for item in property.districtInfo %}
                 <h2>{{ item.value }}</h2>
+                <span>{{ item.value }}</span>
               {% endfor %}
             </div>
           </div>
