--- a/app/view/buy/detail.html
+++ b/app/view/buy/detail.html
@@ -144,7 +144,7 @@
             </div>
             <div class="body">
               {% for item in property.districtInfo %}
-                <h2>{{ item.value }}</h2>
+                <h2>{{ __(item.key) }}</h2>
                 <span>{{ item.value }}</span>
               {% endfor %}
             </div>
