--- a/app/view/home/agent-listing.html
+++ b/app/view/home/agent-listing.html
@@ -112,7 +112,7 @@
                   <div class="img" style="background-image:url(https://www.listsothebysrealtyhk.com{{item.url}})"></div>
                   <div class="name">{{item.name}}</div>
                   <div class="location">{{item.location}}</div>
-                  <div class="price">{{item.sqft}} (SQ FT.)|HKD {{item.price}}</div>
+                  <div class="price">{{item.sqft}} SQ FT | {{item.price}}</div>
                   <!-- <div class="time">{{item.time}}</div> -->
                 </a>
               </div>
